controller/errors
dino_duck.c: In function 'main':
dino_duck.c:46:49: error: 'USB_VID' undeclared (first use in this function)
     pad = libusb_open_device_with_vid_pid(NULL, USB_VID, USB_PID);
                                                 ^
dino_duck.c:46:49: note: each undeclared identifier is reported only once for each function it appears in
dino_duck.c:46:58: error: 'USB_PID' undeclared (first use in this function)
     pad = libusb_open_device_with_vid_pid(NULL, USB_VID, USB_PID);
                                                          ^
dino_duck.c:75:9: error: unknown type name 'bool'
         bool want_jump = (y_axis == 0x00 && y == GROUND_Y);
         ^
dino_duck.c:76:9: error: unknown type name 'bool'
         bool want_duck = (y_axis == 0xFF && y == GROUND_Y);
         ^
root@de1-soc:~/test_gamepad# gcc -o dino_jump3 dino_duck.c usbkeyboard.c -lusb-1.0
dino_duck.c: In function 'main':
dino_duck.c:46:49: error: 'USB_VID' undeclared (first use in this function)
     pad = libusb_open_device_with_vid_pid(NULL, USB_VID, USB_PID);
                                                 ^
dino_duck.c:46:49: note: each undeclared identifier is reported only once for each function it appears in
dino_duck.c:46:58: error: 'USB_PID' undeclared (first use in this function)
     pad = libusb_open_device_with_vid_pid(NULL, USB_VID, USB_PID);
                                                          ^
dino_duck.c:75:9: error: unknown type name 'bool'
         bool want_jump = (y_axis == 0x00 && y == GROUND_Y);
         ^
dino_duck.c:76:9: error: unknown type name 'bool'
         bool want_duck = (y_axis == 0xFF && y == GROUND_Y);
